--- a/src/Components/Header/Showcase/css/Carousel.css
+++ b/src/Components/Header/Showcase/css/Carousel.css
@@ -148,6 +148,145 @@
     color: #09273d;
   }
   .carousel-caption p {
-    display: none;
+    font-size: 10px;
+  }
+}
+@media screen and (max-width: 576px) {
+  .carousel-container {
+    height: 250px !important;
+    overflow: hidden;
+    margin-top: 70px;
+  }
+  .carousel-indicators {
+    margin: auto;
+  }
+  .carousel-indicators [data-bs-target] {
+    border-radius: 50%;
+    width: 10px;
+    height: 10px;
+    margin-top: 0px;
+  }
+  
+  .carousel-item {
+    min-height: 250px;
+    background: no-repeat scroll center scroll;
+    background-size: cover;
+    font-family: "Poppins", sans-serif;
+  }
+  .carousel-item img {
+    height: 250px;
+  }
+
+  .carousel-control-prev {
+    margin-left: 20px;
+    margin-top: 100px;
+    background: #002a47;
+    width: 30px;
+    height: 30px;
+    border-radius: 50px;
+    padding: 7px;
+  }
+  .carousel-control-next {
+    margin-top: 100px;
+    margin-right: 20px;
+    background: #083a5e;
+    width: 30px;
+    height: 30px;
+    border-radius: 50px;
+    padding: 7px;
+  }
+
+  .carousel-caption {
+    width: 200px;
+    background: linear-gradient(
+      to left,
+      rgba(0, 0, 0, 0),
+      rgba(230, 230, 230, 0.651),
+      rgba(0, 0, 0, 0)
+    );
+    bottom:   60px;
+    padding: 20px 0px;
+    /* margin-left: 10px; */
+  }
+  .carousel-caption h1 {
+    font-weight: 600;
+    font-size: 20px;
+    text-align: left;
+    color: #09273d;
+  }
+  .carousel-caption p {
+    font-size: 10px;
+    line-height: 12px;
+    margin-top: 10px;
+  }
+}
+@media screen and (max-width: 360px) {
+  .carousel-container {
+    height: 250px !important;
+    overflow: hidden;
+    margin-top: 70px;
+  }
+  .carousel-indicators {
+    margin: auto;
+  }
+  .carousel-indicators [data-bs-target] {
+    border-radius: 50%;
+    width: 10px;
+    height: 10px;
+    margin-top: 0px;
+  }
+  
+  .carousel-item {
+    min-height: 250px;
+    background: no-repeat scroll center scroll;
+    background-size: cover;
+    font-family: "Poppins", sans-serif;
+  }
+  .carousel-item img {
+    height: 250px;
+  }
+
+  .carousel-control-prev {
+    margin-left: 20px;
+    margin-top: 100px;
+    background: #002a47;
+    width: 30px;
+    height: 30px;
+    border-radius: 50px;
+    padding: 7px;
+  }
+  .carousel-control-next {
+    margin-top: 100px;
+    margin-right: 20px;
+    background: #083a5e;
+    width: 30px;
+    height: 30px;
+    border-radius: 50px;
+    padding: 7px;
+  }
+
+  .carousel-caption {
+    width: 200px;
+    background: linear-gradient(
+      to left,
+      rgba(0, 0, 0, 0),
+      rgba(230, 230, 230, 0.651),
+      rgba(0, 0, 0, 0)
+    );
+    bottom:   70px;
+    padding: 20px 0px;
+    margin-left: 10px;
+  }
+  .carousel-caption h1 {
+    font-weight: 600;
+    font-size: 20px;
+    text-align: left;
+    color: #09273d;
+  }
+  .carousel-caption p {
+    font-size: 10px;
+    line-height: 12px;
+    margin-top: 10px;
+    margin-bottom: 0px;
   }
 }
