--- a/src/Components/Home/ServiceProvide/ServiceProvide.css
+++ b/src/Components/Home/ServiceProvide/ServiceProvide.css
@@ -233,6 +233,21 @@
 }
 
 @media screen and (max-width: 786px) {
+  .swp-header {
+    text-align: center;
+    margin-bottom: 50px !important;
+    background: #002a47;
+    border-radius: 3px;
+    width: 350px;
+    padding: 5px;
+    margin: auto;
+    z-index: 1;
+  }
+  .swp-header h1 {
+    font-family: "Poppins", sans-serif !important;
+    color: #fff;
+    font-size: 34px;
+  }
   .swp-before {
     position: absolute;
     margin-left: 47px;
@@ -240,5 +255,57 @@
   .swp-after {
     position: absolute;
     margin-left: 392px;
+  }
+}
+@media screen and (max-width: 576px) {
+  .swp-header {
+    text-align: center;
+    margin-bottom: 50px !important;
+    background: #002a47;
+    border-radius: 3px;
+    width: 350px;
+    padding: 5px;
+    margin: auto;
+    z-index: 1;
+  }
+  .swp-header h1 {
+    font-family: "Poppins", sans-serif !important;
+    color: #fff;
+    font-size: 34px;
+  }
+  .swp-before {
+    position: absolute;
+    margin-left: 30px;
+  }
+  .swp-after {
+    position: absolute;
+    margin-left: 392px;
+  }
+}
+@media screen and (max-width: 360px) {
+  .swp-header {
+    text-align: center;
+    margin-bottom: 40px !important;
+    background: #002a47;
+    border-radius: 3px;
+    width: 230px;
+    padding: 10px;
+    margin: auto;
+    z-index: 1;
+  }
+  .swp-header h1 {
+    font-family: "Poppins", sans-serif !important;
+    color: #fff;
+    font-size: 20px;
+  }
+  .swp-before {
+    position: absolute;
+    margin-left: 45px;
+    height: 60px;
+  }
+  .swp-after {
+    position: absolute;
+    margin-left: 270px;
+    height: 60px;
   }
 }
