--- a/src/Components/SharedComponents/Nav/Nav.css
+++ b/src/Components/SharedComponents/Nav/Nav.css
@@ -219,14 +219,14 @@
     display: none;
   }
   .navbar {
-    height: 70px !important;
+    height: 90px !important;
     width: 100vw;
     z-index: 99999999999999999999999999;
   }
   .navbar-container {
     width: 100%;
     margin: auto;
-    padding: 0px 20px;
+    padding: 0px 12px;
     background: #fff;
   }
   #mainlogo img{
@@ -244,9 +244,15 @@
     margin-top: 10px;
   }
   .profile-dropdown {
-    width: 150px;
-    margin-left: 0%;
+    width: 100px;
+    color: #979797;
+  }
+  .profile-dropdown {
+    margin-left: 40px;
+  }
+  .profile-dropdown li{
     font-size: 12px;
     color: #979797;
+    font-weight: 200;
   }
 }
