--- a/src/Components/BestBranches/BestBranches.css
+++ b/src/Components/BestBranches/BestBranches.css
@@ -92,3 +92,195 @@
   width: 100%;
   height: 720px;
 }
+
+/* @media screen and (max-width: 576px) {
+  .bestBranches-showcase {
+    width: 100vw;
+    height: 450px;
+    overflow: hidden;
+    margin-top: 90px;
+    display: flex;
+  }
+  .bestBranches-content {
+    width: 40%;
+    font-family: "Poppins", sans-serif;
+    display: flex;
+  }
+  .bestBranches-content-title {
+    width: 300px;
+    position: absolute;
+    background: #fff;
+    color: #002a47;
+    margin-top: 100px;
+    margin-left: 30px;
+    border-right: 10px solid #002a47;
+    border-bottom: 10px solid #002a47;
+    z-index: 1;
+  }
+  
+  .bestBranches-content-title:after {
+    border-top: 10px solid #09273d;
+    display: block;
+    position: absolute;
+    content: "";
+    left: 460.6px;
+    right: 0;
+    top: -10px;
+    width: 34.7%;
+  }
+  .bestBranches-content-title h1 {
+    width: 300px;
+    font-size: 20px;
+    font-weight: 700;
+    color: #002a47;
+  }
+  .bestBranches-content h1 span {
+    font-weight: 700;
+    color: #fa4319;
+  }
+  .bestBranches-content h1 small {
+    font-size: 15px;
+    font-weight: 600;
+    color: #fa4319;
+  }
+  .bestBranches-content-title p {
+    color: #fa4319;
+    margin: 20px 0px;
+  }
+  .bestBranches-content-title p span {
+    color: #002a47;
+  }
+  
+  .list p {
+    font-weight: 500;
+    font-size: 12px;
+    line-height: 20px;
+    color: #09273d;
+  }
+  .list p::before {
+    content: "";
+    width: 10px;
+    height: 10px;
+    background: #fa4319;
+    display: block;
+    float: left;
+    margin-right: -6px;
+    margin-top: 5px;
+  }
+  .list p::after {
+    content: "";
+    width: 10px;
+    height: 10px;
+    background: #09273d;
+    display: block;
+    float: left;
+    margin-right: 13px;
+    margin-top: 2px;
+  }
+  .bestBranches-slider-container {
+    width: 60%;
+    height: 100vh;
+  }
+  .bestBranches-slider-container img {
+    width: 100%;
+    height: 100vh;
+  }
+} */
+@media screen and (max-width: 360px) {
+  .bestBranches-showcase {
+    width: 100vw;
+    height: 300px;
+    overflow: hidden;
+    margin-top: 90px;
+    display: flex;
+  }
+  .bestBranches-content {
+    width: 30%;
+    font-family: "Poppins", sans-serif;
+    display: flex;
+    /* border: 1px solid red; */
+  }
+  .bestBranches-content-title {
+    width: 230px;
+    padding: 12px 0px;
+    position: absolute;
+    background: rgba(255, 255, 255, 0.938);
+    color: #002a47;
+    margin-top: 70px;
+    margin-left: 20px;
+    border-right: 5px solid #002a47;
+    border-bottom: 5px solid #002a47;
+    z-index: 1;
+  }
+  
+  .bestBranches-content-title:after {
+    border-top: 5px solid #09273d;
+    display: block;
+    position: absolute;
+    content: "";
+    left: 88px;
+    right: 0;
+    top: 0px;
+    width: 63%;
+  }
+  .bestBranches-content-title h1 {
+    width: 200px;
+    font-size: 16px;
+    font-weight: 600;
+    color: #002a47;
+  }
+  .bestBranches-content h1 span {
+    font-weight: 600;
+    color: #fa4319;
+  }
+  .bestBranches-content h1 small {
+    font-size: 12px;
+    font-weight: 600;
+    color: #fa4319;
+  }
+  .bestBranches-content-title p {
+    color: #fa4319;
+    margin: 10px 0px;
+    font-size: 10px;
+  }
+  .bestBranches-content-title p span {
+    color: #002a47;
+  }
+  
+  .list p {
+    /* width: 150px; */
+    font-weight: 500;
+    font-size: 8px;
+    margin-top: 10px;
+    /* line-height: 16px; */
+    color: #09273d;
+  }
+  .list p::before {
+    content: "";
+    width: 10px;
+    height: 10px;
+    background: #fa4319;
+    display: block;
+    float: left;
+    margin-right: -6px;
+    margin-top: 6px;
+  }
+  .list p::after {
+    content: "";
+    width: 10px;
+    height: 10px;
+    background: #09273d;
+    display: block;
+    float: left;
+    margin-right: 5px;
+    margin-top: 3px;
+  }
+  .bestBranches-slider-container {
+    width: 70%;
+    height: 100vh;
+  }
+  .bestBranches-slider-container img {
+    width: 100%;
+    height: 45vh;
+  }
+}
