--- a/src/Components/BestBranches/Branches/Branches.css
+++ b/src/Components/BestBranches/Branches/Branches.css
@@ -34,3 +34,38 @@
     color: #fff;
     font-size: 34px;
   }
+
+  @media screen and (max-width: 360px) {
+    .branches-header-before {
+      width: 20px;
+      height: 60px;
+      background: #FA4319;
+      position: absolute;
+      margin-left: 70px;
+      margin-top: -4px;
+      z-index: -1;
+    }
+    .branches-header-after {
+      width: 20px;
+      height: 60px;
+      background: #FA4319;
+      position: absolute;
+      margin-left: 245px;
+      margin-top: -4px;
+      z-index: -1;
+    }
+    .branches-header-header {
+      text-align: center;
+      margin-bottom: 20px !important;
+      background: #002a47;
+      border-radius: 3px;
+      width: 180px;
+      padding: 10px;
+      margin: auto;
+    }
+    .branches-header-header h1 {
+      font-family: "Poppins", sans-serif !important;
+      color: #fff;
+      font-size: 20px;
+    }
+  }
