--- a/src/Components/Home/ContactUs/ContactUs.css
+++ b/src/Components/Home/ContactUs/ContactUs.css
@@ -199,16 +199,44 @@
   .contactImg {
     margin-top: 40px;
     margin-left: 0px;
-    width: 300px;
+    width: 335px;
   }
   .contact-content-container {
-    width: 300px;
-    padding: 50px 30px;
-    margin-top: 40px !important;
+    width: 400px;
+    height: 320px;
+    padding: 30px 20px;
+    /* margin-top: 40px !important; */
     margin-left: 0px;
   }
+  .contact-content-container h2 {
+    font-size: 15px;
+    margin-bottom: 30px;
+    border-bottom: 2px solid #fa4319;
+    color: #fa4319;
+    font-weight: 600;
+  }
+  .contact-content-container p {
+    margin-bottom: 15px;
+    font-size: 12px;
+    color: gray;
+    font-weight: 300;
+  }
+  .contact-content-container p span {
+    font-size: 16px;
+    color: #002a47;
+    margin-right: 3px;
+  }
+  .letsTalkBtn {
+    border: none;
+    padding: 3px 7px;
+    font-size: 11px;
+  }
   .letsTalk-container {
-    margin-top: 40px;
-    margin-left: 12px; 
+    width: 0px;
+    margin-left: 0px; 
+    height: 430px;
+    position: absolute;
+    margin-top: 400px;
+    /* transition: all 1s; */
   }
 }
