--- a/src/Components/Home/WhyChooseUs/WhyChooseUs.css
+++ b/src/Components/Home/WhyChooseUs/WhyChooseUs.css
@@ -195,13 +195,13 @@ a {
   }
   .wcu-before {
     position: absolute;
-    margin-left: 50px;
+    margin-left: 230px;
     margin-top: -4px;
     height: 60px;
   }
   .wcu-after {
     position: absolute;
-    margin-left: 265px;
+    margin-left: 445px;
     margin-top: -4px;
     height: 60px;
   }
@@ -210,14 +210,15 @@ a {
   }
   .wcu-deliveryManImg {
     margin-left: 0px;
-    width: 450px;
+    width: 400px;
   }
 
   .count-container {
+    /* width: 100vw; */
     display: grid;
-    grid-template-columns: repeat(1, 1fr);
-    grid-gap: 30px 25px;
-    margin-left: 50px;
+    grid-template-columns: repeat(2, 1fr);
+    grid-gap: 20px;
+    /* margin-left: 50px; */
   }
   .count-container-border1,
   .count-container-border2,
@@ -228,7 +229,7 @@ a {
   .Expert-employee-count,
   .satisfied-client-count,
   .branches-count {
-    width: 360px;
+    width: 350px;
     box-shadow: rgba(0, 0, 0, 0.25) 0px 0.0625em 0.0625em, rgba(0, 0, 0, 0.25) 0px 0.125em 0.5em, rgba(255, 255, 255, 0.1) 0px 0px 0px 1px inset;
     padding: 40px;
     text-align: center;
@@ -253,13 +254,13 @@ a {
   }
   .wcu-before {
     position: absolute;
-    margin-left: 50px;
+    margin-left: 157px;
     margin-top: -4px;
     height: 60px;
   }
   .wcu-after {
     position: absolute;
-    margin-left: 265px;
+    margin-left: 373px;
     margin-top: -4px;
     height: 60px;
   }
@@ -291,15 +292,14 @@ a {
   }
 
   .wcu-deliveryManImg {
-    margin-left: 0px;
-    width: 340px;
+    width: 500px;
+    margin-left: 20px;
   }
 
   .count-container {
     display: grid;
     grid-template-columns: repeat(1, 1fr);
-    grid-gap: 30px 20px;
-    margin-left: 0px;
+    grid-gap: 30px 0px;
   }
   .count-container-border1,
   .count-container-border2,
@@ -310,12 +310,13 @@ a {
   .Expert-employee-count,
   .satisfied-client-count,
   .branches-count {
-    width: 335px;
+    width: 95vw;
     box-shadow: rgba(0, 0, 0, 0.25) 0px 0.0625em 0.0625em, rgba(0, 0, 0, 0.25) 0px 0.125em 0.5em, rgba(255, 255, 255, 0.1) 0px 0px 0px 1px inset;
-    padding: 40px 20px;
+    padding: 70px 20px;
     text-align: center;
     color: #fa4319;
     position: relative;
+    
   }
 }
 @media screen and (max-width: 360px) {
